<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"  android:layout_marginTop="10dp"
    tools:context="biz.antworks.locationupdater.DispatchDetailsActivity">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastReg"
            android:id="@+id/DispId"
            android:textStyle="bold"
            android:scrollX="20dp"
            android:lines="1"
            android:layout_marginLeft="5dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VehicleNo"
            android:id="@+id/vehicleNum"
            android:textStyle="bold"
            android:scrollX="20dp"
            android:lines="1"
            android:layout_toRightOf="@+id/DispId"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="02dp"
            android:layout_below="@id/DispId"
            android:background="#ff1e7780"
            android:text="@string/Line"
            android:id="@+id/Line"
            android:textStyle="bold"
            />



        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Line"
            android:id="@+id/Current_Trip_Details"
            android:paddingTop="10dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_place_label"
                android:id="@+id/start_place_label"
                android:textSize="16sp"
                android:layout_alignParentLeft="true"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_place_view"
                android:id="@+id/start_view"
                android:textSize="16sp"
                android:layout_toRightOf="@id/start_place_label"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dest_place_label"
                android:id="@+id/dest_place_label"
                android:textSize="16sp"
                android:layout_below="@+id/start_place_label"
                android:layout_alignParentLeft="true"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dest_place_view"
                android:id="@+id/dest_view"
                android:textSize="16sp"
                android:layout_toRightOf="@id/dest_place_label"
                android:layout_below="@+id/start_view"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_label"
                android:id="@+id/status_label"
                android:textSize="16sp"
                android:layout_below="@+id/dest_place_label"
                android:layout_alignParentLeft="true"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_view"
                android:id="@+id/status_v"
                android:paddingLeft="10dp"
                android:textSize="16sp"
                android:layout_below="@+id/dest_view"
                android:layout_toRightOf="@id/status_label"
                android:textStyle="bold"
                />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Current_Trip_Details"
            android:id="@+id/DispatchViews"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/custom_edittext"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/get_trip"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textSize="15sp"
                    android:padding="05dp"
                    android:textColor="#ff000000"
                    android:textStyle="bold"
                    android:layout_marginRight ="5dp"
                    android:layout_marginLeft ="5dp"
                    android:text="@string/get_trip"
                    />

                <TextView
                    android:id="@+id/get_trip_view"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="15sp"
                    android:padding="6dp"
                    android:textColor="#ff000000"
                    android:textStyle="bold"
                    android:layout_marginLeft ="5dp"
                    android:text="@string/get_trip_view"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/start_trip"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textSize="15sp"
                    android:padding="05dp"
                    android:textColor="#ff000000"
                    android:textStyle="bold"
                    android:layout_marginRight ="5dp"
                    android:layout_marginLeft ="5dp"
                    android:text="@string/started_trip"/>
                <!-- android:background="#f709af1a"-->

                <TextView
                    android:id="@+id/start_trip_view"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="15sp"
                    android:padding="05dp"
                    android:textColor="#ff000000"
                    android:textStyle="bold"

                    android:layout_marginLeft ="5dp"
                    android:text="@string/start_trip_view"/>
                <!-- android:layout_toRightOf="@id/get_trip"-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/reached"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textSize="15sp"
                    android:padding="05dp"
                    android:textColor="#ff000000"
                    android:textStyle="bold"

                    android:layout_marginRight ="5dp"
                    android:layout_marginLeft ="5dp"
                    android:text="@string/reached"
                    />

                <TextView
                    android:id="@+id/reached_view"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="15sp"
                    android:padding="05dp"
                    android:textColor="#ff000000"
                    android:textStyle="bold"

                    android:layout_marginLeft ="5dp"
                    android:text="@string/reached_view"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/finished"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textSize="15sp"
                    android:padding="05dp"
                    android:textColor="#ff000000"
                    android:textStyle="bold"
                    android:layout_marginRight ="5dp"
                    android:layout_marginLeft ="5dp"
                    android:text="@string/finished"/>
                <!-- android:background="#f709af1a"-->

                <TextView
                    android:id="@+id/finished_view"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="15sp"
                    android:padding="05dp"
                    android:textColor="#ff000000"
                    android:textStyle="bold"

                    android:layout_marginLeft ="5dp"
                    android:text="@string/finished_view"/>
                <!-- android:layout_toRightOf="@id/get_trip"-->
            </LinearLayout>







            <!--<TextView
                android:id="@+id/reached"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:padding="05dp"
                android:textSize="15sp"
                android:textColor="#ffb6b6b6"
                android:layout_marginRight ="8dp"
                android:layout_toRightOf="@+id/start_trip"
                android:text="@string/reached"/>
            &lt;!&ndash;android:background="#ffd16100"&ndash;&gt;

            <TextView
                android:id="@+id/reached_view"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:padding="05dp"
                android:textSize="13sp"
                android:layout_below="@+id/reached"
                android:layout_marginRight ="8dp"
                android:layout_toRightOf="@+id/start_trip_view"
                android:text="@string/reached_view"/>




            <TextView
                android:id="@+id/finished"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:padding="05dp"
                android:textSize="15sp"
                android:textColor="#ffb6b6b6"
                android:layout_toRightOf="@id/reached"
                android:text="@string/finished"/>
            &lt;!&ndash;android:background="#ffd30000"&ndash;&gt;

            <TextView
                android:id="@+id/finished_view"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:padding="05dp"
                android:textSize="13sp"
                android:layout_below="@+id/finished"
                android:layout_toRightOf="@id/reached_view"
                android:text="@string/finished_view"/>
-->
        </LinearLayout>







        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#ff1e7780"
                android:text="@string/Line"
                android:id="@+id/Line1"
                android:paddingLeft="05dp"
                android:paddingRight="05dp"
                android:paddingTop="05dp"
                android:paddingBottom="05dp"
                android:textStyle="bold"
                />



            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:src="@drawable/antworks"
                android:layout_gravity="right"
                />

        </LinearLayout>



</RelativeLayout> </ScrollView>