<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <!-- Here you put the rest of your current view-->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle">




        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Header">
            <TextView
                android:id="@+id/DateHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingRight="65dp"
                android:paddingLeft="10dp"
                android:text="@string/DateHead"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <!-- android:textColor="#ff192cfc"-->

            <TextView
                android:id="@+id/FromHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/DateHead"
                android:textColor="#ff14ba17"
                android:text="@string/FromHead"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginRight="30dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ToHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/DateHead"
                android:layout_below="@id/FromHead"
                android:textColor="#fff11f2a"
                android:text="@string/ToHead"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/StatusHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="#f7e36c00"
                android:layout_alignParentRight="true"
                android:text="@string/StatusHead"
                android:textSize="20sp"
                android:layout_marginRight="20dp"
                android:paddingRight="10dp"
                android:textStyle="bold"/>
            <!--android:layout_toRightOf="@id/ToHead"-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="02dp"
                android:background="#ff1e7780"
                android:text="@string/Line"
                android:layout_below="@id/ToHead"
                android:id="@+id/Line"
                android:textStyle="bold"
                />

        </RelativeLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Header"
            android:id="@+id/listArray">

            <ListView
                android:id="@+id/list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </ListView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true" >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#ff1e7780"
                android:text="@string/Line"
                android:id="@+id/DispLine"
                android:textStyle="bold"
                />



            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:src="@drawable/antworks"
                android:layout_gravity="right"
                android:contentDescription="ByAntWorks"/>


        </LinearLayout>




    </RelativeLayout>



</ScrollView>


